added dfs as intermediate files for faster load

--- a/notebooks/graph_analysis/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/graph_helper_functions.ipynb
@@ -74,22 +74,25 @@
     "                    SELECT r.repo_id,\n",
     "                    r.repo_git,\n",
     "                    r.repo_name,\n",
-    "                    i.cntrb_id,\n",
+    "                    ie.cntrb_id,\n",
+    "                    ie.action,\n",
     "                    i.issue_id,\n",
     "                    i.created_at\n",
     "                    FROM\n",
-    "                    repo r, issues i\n",
+    "                    repo r, issues i, issue_events ie\n",
     "                     WHERE\n",
     "                    i.repo_id = \\'{repo_id}\\' AND\n",
-    "                    i.repo_id = r.repo_id\n",
+    "                    i.repo_id = r.repo_id AND\n",
+    "                    i.issue_id = ie.issue_id AND\n",
+    "                    ie.action='closed'\n",
     "            \"\"\")\n",
     "        df_current_repo = pd.read_sql(repo_query, con=engine)\n",
     "        issue_contrib = pd.concat([issue_contrib, df_current_repo])\n",
     "\n",
     "    issue_contrib = issue_contrib.reset_index()\n",
     "    issue_contrib.drop(\"index\", axis=1, inplace=True)\n",
-    "    issue_contrib.columns =['repo_id', 'repo_git', 'repo_name', 'cntrb_id', 'issue_id', 'created_at']\n",
-    "    issue_contrib['cntrb_id'] = issue_contrib['cntrb_id'].astype('Int64')\n",
+    "    issue_contrib.columns =['repo_id', 'repo_git', 'repo_name', 'cntrb_id', 'action', 'issue_id', 'created_at']\n",
+    "#     issue_contrib['cntrb_id'] = issue_contrib['cntrb_id'].astype('Int64')\n",
     "    return issue_contrib"
    ]
   },
@@ -163,7 +166,7 @@
     "    commit_contrib = commit_contrib.reset_index()\n",
     "    commit_contrib.drop(\"index\", axis=1, inplace=True)\n",
     "    commit_contrib.columns =['repo_id', 'repo_git', 'repo_name', 'cntrb_id', 'cmt_id', 'cmt_date_attempted']\n",
-    "    commit_contrib['cntrb_id'] = commit_contrib['cntrb_id'].astype('Int64')\n",
+    "#     commit_contrib['cntrb_id'] = commit_contrib['cntrb_id'].astype('Int64')\n",
     "\n",
     "    return commit_contrib"
    ]
@@ -199,7 +202,7 @@
     "    prr_contrib = prr_contrib.reset_index()\n",
     "    prr_contrib.drop(\"index\", axis=1, inplace=True)\n",
     "    prr_contrib.columns = ['repo_id', 'repo_git', 'repo_name', 'cntrb_id', 'pull_request_id']\n",
-    "    prr_contrib['cntrb_id'] = prr_contrib['cntrb_id'].astype('Int64')\n",
+    "#     prr_contrib['cntrb_id'] = prr_contrib['cntrb_id'].astype('Int64')\n",
     "\n",
     "    return prr_contrib"
    ]
