added other repos & filtered centrally close repos

--- a/notebooks/graph_analysis/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/graph_helper_functions.ipynb
@@ -16,8 +16,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import collections\n",
+    "from operator import itemgetter\n",
+    "import matplotlib.patches as mpatches\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import sqlalchemy as salc\n",
+    "import networkx as nx\n",
     "import json\n",
     "\n",
     "with open(\"../../comm_cage.json\") as config_file:\n",
@@ -99,6 +104,30 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "c6e43d1c-e03d-4428-a600-dfd40f9ae74c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_repos_outside(engine):\n",
+    "\n",
+    "    issue_contrib = pd.DataFrame()\n",
+    "    repo_query = salc.sql.text(f\"\"\"\n",
+    "                    SET SCHEMA 'augur_data';\n",
+    "                    SELECT r.repo_name,\n",
+    "                    (CASE WHEN REGEXP_LIKE(repo_name, 'https://github.com/open-telemetry/opentelemetry-go|https://github.com/open-telemetry/opentelemetry-specification|https://github.com/open-telemetry/opentelemetry-collector') THEN true ELSE NULL\n",
+    "                    END) AS flag\n",
+    "                    FROM repo r\n",
+    "            \"\"\")\n",
+    "    df_current_repo = pd.read_sql(repo_query, con=engine)\n",
+    "        \n",
+    "    print(df_current_repo)\n",
+    "#     issue_contrib['cntrb_id'] = issue_contrib['cntrb_id'].astype('Int64')\n",
+    "    return issue_contrib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b397d6d4-320a-4434-a1ff-5bd006eddebf",
    "metadata": {},
    "outputs": [],
@@ -135,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "87158ad6-c882-4f36-97d3-26f6eaa96dab",
    "metadata": {},
    "outputs": [],
@@ -166,14 +195,13 @@
     "    commit_contrib = commit_contrib.reset_index()\n",
     "    commit_contrib.drop(\"index\", axis=1, inplace=True)\n",
     "    commit_contrib.columns =['repo_id', 'repo_git', 'repo_name', 'cntrb_id', 'cmt_id', 'cmt_date_attempted']\n",
-    "#     commit_contrib['cntrb_id'] = commit_contrib['cntrb_id'].astype('Int64')\n",
     "\n",
     "    return commit_contrib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0a73e2b4-a6de-4048-aab7-bec1bb2aa4ed",
    "metadata": {},
    "outputs": [],
@@ -202,14 +230,13 @@
     "    prr_contrib = prr_contrib.reset_index()\n",
     "    prr_contrib.drop(\"index\", axis=1, inplace=True)\n",
     "    prr_contrib.columns = ['repo_id', 'repo_git', 'repo_name', 'cntrb_id', 'pull_request_id']\n",
-    "#     prr_contrib['cntrb_id'] = prr_contrib['cntrb_id'].astype('Int64')\n",
     "\n",
     "    return prr_contrib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bb85e401-d717-47a5-8639-cc23555de47d",
    "metadata": {},
    "outputs": [],
@@ -223,6 +250,233 @@
     "    df_melted = df_melted[df_melted[df_melted.columns[2]] != 0]\n",
     "\n",
     "    return df_melted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0f88f1f5-9cf6-46ba-8d9b-bed7b45a3c7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_page_ranks(graph, top, known_repos, other_repos, scores):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    This method takes in a graph, and returns the nodes ranked by page rank \n",
+    "    graph: input graph\n",
+    "    top: top number of repos to subset after calculating the page rank\n",
+    "    known_repos: list of repository/community names known to us\n",
+    "    other_repos: list of repository/community names that we want to determine the importance of\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    pageranks = nx.pagerank(graph, alpha=0.85, personalization=None, max_iter=100, tol=1e-06, nstart=None, weight='weight', dangling=None)\n",
+    "    \n",
+    "    scores['page_rank'] = scores['repo'].map(pageranks)\n",
+    "    \n",
+    "    page_rank_known_repos = collections.defaultdict(int)\n",
+    "    page_rank_interesting_repos = collections.defaultdict(int)\n",
+    "\n",
+    "    for key in pageranks:\n",
+    "        if key in known_repos:\n",
+    "            page_rank_known_repos[key] = pageranks[key]\n",
+    "\n",
+    "        elif key in other_repos:\n",
+    "            page_rank_interesting_repos[key] = pageranks[key]\n",
+    "    \n",
+    "    top_page_rank_known_repos = dict(sorted(page_rank_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_page_rank_interesting_repos = dict(sorted(page_rank_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    \n",
+    "    return top_page_rank_known_repos, top_page_rank_interesting_repos, pageranks, scores\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e532825c-411d-4cce-b659-31ea239ba910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_betweenness_centrality(graph, top, known_repos, other_repos, scores):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    This method takes in a graph, and returns the nodes ranked by betweenness centrality scores\n",
+    "    graph: input graph\n",
+    "    top: top number of repos to subset after calculating the betweenness centrality scores\n",
+    "    known_repos: list of repository/community names known to us\n",
+    "    other_repos: list of repository/community names that we want to determine the importance of\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Betweenness centrality measures the extent to which a node lies on paths between other nodes in the graph. \n",
+    "    # Nodes with higher betweenness have more influence within a network. \n",
+    "    # Thus repositories with higher centrality scores can thought to be influential in connection to other repositories in the network.\n",
+    "\n",
+    "    bw_centrality = nx.betweenness_centrality(graph)\n",
+    "    \n",
+    "    scores['betweenness_centrality'] = scores['repo'].map(bw_centrality)\n",
+    "\n",
+    "    bw_centrality_known_repos = collections.defaultdict(int)\n",
+    "    bw_centrality_interesting_repos = collections.defaultdict(int)\n",
+    "\n",
+    "    for key in bw_centrality:\n",
+    "        if key in known_repos:\n",
+    "            bw_centrality_known_repos[key] = bw_centrality[key]\n",
+    "\n",
+    "        elif key in other_repos:\n",
+    "            bw_centrality_interesting_repos[key] = bw_centrality[key]\n",
+    "    \n",
+    "    top_bw_centrality_known_repos = dict(sorted(bw_centrality_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_bw_centrality_interesting_repos = dict(sorted(bw_centrality_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    \n",
+    "    return top_bw_centrality_known_repos, top_bw_centrality_interesting_repos, bw_centrality, scores\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e6e83c78-0404-40cb-8e5e-71a9f11d9c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_closeness_centrality(graph, top, known_repos, other_repos, scores):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    This method takes in a graph, and returns the nodes ranked by closeness centrality scores\n",
+    "    graph: input graph\n",
+    "    top: top number of repos to subset after calculating the closeness centrality scores\n",
+    "    known_repos: list of repository/community names known to us\n",
+    "    other_repos: list of repository/community names that we want to determine the importance of\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    c_centrality = nx.closeness_centrality(graph)\n",
+    "    \n",
+    "    scores['closeness_centrality'] = scores['repo'].map(c_centrality)\n",
+    "    \n",
+    "    c_centrality_known_repos = collections.defaultdict(int)\n",
+    "    c_centrality_interesting_repos = collections.defaultdict(int)\n",
+    "\n",
+    "    for key in c_centrality:\n",
+    "        if key in known_repos:\n",
+    "            c_centrality_known_repos[key] = c_centrality[key]\n",
+    "\n",
+    "        elif key in other_repos:\n",
+    "            c_centrality_interesting_repos[key] = c_centrality[key]\n",
+    "    \n",
+    "    top_c_centrality_known_repos = dict(sorted(c_centrality_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_c_centrality_interesting_repos = dict(sorted(c_centrality_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    \n",
+    "    return top_c_centrality_known_repos, top_c_centrality_interesting_repos, c_centrality, scores\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0379ee41-df81-497c-b87f-587f872ada8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_graph(graph, known_repos, other_repos, size, title, weights=None, with_labels=True, alpha=None, edge_color='k'):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    graph: the networkX graph that we want to plot\n",
+    "    known_repos: list of known repos for coloring\n",
+    "    other_repos: list of other repos for coloring\n",
+    "    size: can be either 'weighted', 'equal' or 'conditional'\n",
+    "    When size is 'weighted', the node sizes on the graph are based on the weights provided\n",
+    "    When size is 'equal', all nodes are the same size\n",
+    "    When size is 'conditional', nodes which belong to the weights array are larger than the rest of the nodes\n",
+    "    weights: this decides the size of the nodes in the 'weighted' and 'conditional' type sizes\n",
+    "    \n",
+    "    here we plot a networkx graph based on the provided parameters\n",
+    "    \"\"\"\n",
+    "    blue_patch = mpatches.Patch(color='blue', label='Known Repositories')\n",
+    "    green_patch = mpatches.Patch(color='green', label='Interesting Repositories')\n",
+    "    yellow_patch = mpatches.Patch(color='green', label='Contributors')\n",
+    "\n",
+    "    nodes = graph.nodes()\n",
+    "    colors = []\n",
+    "    for n in nodes:\n",
+    "        if n in known_repos:\n",
+    "            colors.append('blue')\n",
+    "        elif n in other_repos:\n",
+    "            colors.append('green')\n",
+    "        else:\n",
+    "            colors.append('yellow')\n",
+    "            \n",
+    "    if size == 'weighted':\n",
+    "        node_sizes = [v * 10000 for v in weights.values()]\n",
+    "    elif size == 'conditional':\n",
+    "        node_sizes = [1000 if ns in weights else 50 for ns in nodes]\n",
+    "    elif size == 'equal':\n",
+    "        node_sizes = 300\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(15,15))\n",
+    "\n",
+    "    font = {\"color\": \"k\", \"fontsize\": 15}\n",
+    "    \n",
+    "    ax.set_title(title, font)\n",
+    "    ax.legend(handles=[yellow_patch, blue_patch, green_patch])\n",
+    "    \n",
+    "    nx.draw_networkx(graph, node_color=colors, node_size=node_sizes, font_size=9, ax=ax, with_labels=with_labels, alpha=alpha, edge_color=edge_color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a562a663-b92e-4323-92a2-7e7c58ed1ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def project_nodes_edges_contributions(df):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Using this function we represent data as a graph where the project repositories are represented by nodes \n",
+    "    and the edges are shared contributions between those projects\n",
+    "    \"\"\"\n",
+    " \n",
+    "    # structure of `contributorGraph` =  \n",
+    "    # {  \n",
+    "    # `contributor1`: [(`repo1`, `contributions by the contributor1 in repo 1`)],  \n",
+    "    #  `contributor2`: [(`repo2`, `contributions by the contributor2 in repo 2` ), (`repo1`, `contributions by the contributor2 in repo 1`)]  \n",
+    "    # }\n",
+    "\n",
+    "    contributorGraph = {}\n",
+    "    for i, row in df.iterrows():\n",
+    "        if row['cntrb_id'] not in contributorGraph:\n",
+    "            contributorGraph[row['cntrb_id']] = []\n",
+    "        if(row['total_contributions'] > 0):\n",
+    "            contributorGraph[row['cntrb_id']].append((row['repo_name'], row['total_contributions']))\n",
+    "            \n",
+    "    # `contributorGraph`  is a dictionary where each key is a contributor, \n",
+    "    #  and the value is a list of repositories the contributor has contributed to and the number of contributions it has made.\n",
+    "    \n",
+    "    #  \"shared connections\" constitute of commits, PRs, issues* and PR reviews that are made by the same contributor.\n",
+    "    #  2 project repositories are \"connected\" if they have a \"shared connection\"** between them. \n",
+    "    #  If they have a contributor who makes a commit, PR, issue or PR review in both the repositories, \n",
+    "    #  they count as a shared contributor and the repositories are connected. \n",
+    "    \n",
+    "    commonRepoContributionsByContributor = collections.defaultdict(int)\n",
+    "    for key in contributorGraph:\n",
+    "        if len(contributorGraph[key])-1 <= 0:\n",
+    "            continue\n",
+    "        for repoContributionIndex in range(len(contributorGraph[key])-1):\n",
+    "            commonRepoContributionsByContributor[(contributorGraph[key][repoContributionIndex][0], contributorGraph[key][repoContributionIndex+1][0])] += contributorGraph[key][repoContributionIndex][1]+contributorGraph[key][repoContributionIndex+1][1]\n",
+    "\n",
+    "    # `commonRepoContributionsByContributor` is a nested dictionary consisting of dictionaries of repository pairs and their common contributions. \n",
+    "    #  structure of `commonRepoContributionsByContributor` =  \n",
+    "    #  {  \n",
+    "    #  (`repo1, repo2`): `PRs by same authors in repo 1 and repo 2`,  \n",
+    "    #  (`repo2, repo4`): `PRs by same authors in repo 2 and repo 4`,  \n",
+    "    #  (`repo2, repo5`): `PRs by same authors in repo 2 and repo 5`,   \n",
+    "    #   }    \n",
+    "    \n",
+    "    res = []\n",
+    "    for key in commonRepoContributionsByContributor:\n",
+    "        res.append(tuple(str(k) for k in list(key)) + (commonRepoContributionsByContributor[key],))\n",
+    "        \n",
+    "    return res, commonRepoContributionsByContributor"
    ]
   }
  ],
