--- a/notebooks/graph_analysis/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/graph_helper_functions.ipynb
@@ -13,7 +13,19 @@
    "execution_count": 1,
    "id": "f17ef2b5-015c-4b1c-886c-ac8553b869e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../../comm_cage.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-858f614c4a48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../comm_cage.json\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mconfig_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mconfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../comm_cage.json'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import collections\n",
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "908df105-d4d6-48c6-b322-7272cb026dd5",
    "metadata": {},
    "outputs": [],
@@ -65,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "40a5c30d-9e9d-46b2-916a-ff64809bc288",
    "metadata": {},
    "outputs": [],
@@ -103,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c6e43d1c-e03d-4428-a600-dfd40f9ae74c",
    "metadata": {},
    "outputs": [],
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b397d6d4-320a-4434-a1ff-5bd006eddebf",
    "metadata": {},
    "outputs": [],
@@ -164,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "87158ad6-c882-4f36-97d3-26f6eaa96dab",
    "metadata": {},
    "outputs": [],
@@ -201,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0a73e2b4-a6de-4048-aab7-bec1bb2aa4ed",
    "metadata": {},
    "outputs": [],
@@ -236,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "bb85e401-d717-47a5-8639-cc23555de47d",
    "metadata": {},
    "outputs": [],
@@ -254,12 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0f88f1f5-9cf6-46ba-8d9b-bed7b45a3c7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_page_ranks(graph, top, known_repos, other_repos, scores):\n",
+    "def get_page_ranks(graph, top, graduated_repos, incubating_repos, sandbox_repos, scores):\n",
     "    \n",
     "    \"\"\"\n",
     "    This method takes in a graph, and returns the nodes ranked by page rank \n",
@@ -273,31 +285,35 @@
     "    \n",
     "    scores['page_rank'] = scores['repo'].map(pageranks)\n",
     "    \n",
-    "    page_rank_known_repos = collections.defaultdict(int)\n",
-    "    page_rank_interesting_repos = collections.defaultdict(int)\n",
+    "    page_rank_graduated_repos = collections.defaultdict(int)\n",
+    "    page_rank_incubating_repos = collections.defaultdict(int)\n",
+    "    page_rank_sandbox_repos = collections.defaultdict(int)\n",
     "\n",
     "    for key in pageranks:\n",
-    "        if key in known_repos:\n",
-    "            page_rank_known_repos[key] = pageranks[key]\n",
+    "        if key in graduated_repos:\n",
+    "            page_rank_graduated_repos[key] = pageranks[key]\n",
     "\n",
-    "        elif key in other_repos:\n",
-    "            page_rank_interesting_repos[key] = pageranks[key]\n",
+    "        elif key in incubating_repos:\n",
+    "            page_rank_incubating_repos[key] = pageranks[key]\n",
+    "        elif key in sandbox_repos:\n",
+    "            page_rank_sandbox_repos[key] = pageranks[key]\n",
     "    \n",
-    "    top_page_rank_known_repos = dict(sorted(page_rank_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
-    "    top_page_rank_interesting_repos = dict(sorted(page_rank_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_page_rank_graduated_repos = dict(sorted(page_rank_graduated_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_page_rank_incubating_repos = dict(sorted(page_rank_incubating_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_page_rank_sandbox_repos = dict(sorted(page_rank_sandbox_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
     "    \n",
-    "    return top_page_rank_known_repos, top_page_rank_interesting_repos, pageranks, scores\n",
+    "    return top_page_rank_graduated_repos, top_page_rank_incubating_repos, top_page_rank_sandbox_repos, pageranks, scores\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e532825c-411d-4cce-b659-31ea239ba910",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_betweenness_centrality(graph, top, known_repos, other_repos, scores):\n",
+    "def get_betweenness_centrality(graph, top, graduated_repos, incubating_repos, sandbox_repos, scores):\n",
     "    \n",
     "    \"\"\"\n",
     "    This method takes in a graph, and returns the nodes ranked by betweenness centrality scores\n",
@@ -315,31 +331,36 @@
     "    \n",
     "    scores['betweenness_centrality'] = scores['repo'].map(bw_centrality)\n",
     "\n",
-    "    bw_centrality_known_repos = collections.defaultdict(int)\n",
-    "    bw_centrality_interesting_repos = collections.defaultdict(int)\n",
+    "    bw_centrality_graduated_repos = collections.defaultdict(int)\n",
+    "    bw_centrality_incubating_repos = collections.defaultdict(int)\n",
+    "    bw_centrality_sandbox_repos = collections.defaultdict(int)\n",
     "\n",
     "    for key in bw_centrality:\n",
-    "        if key in known_repos:\n",
-    "            bw_centrality_known_repos[key] = bw_centrality[key]\n",
+    "        if key in graduated_repos:\n",
+    "            bw_centrality_graduated_repos[key] = bw_centrality[key]\n",
     "\n",
-    "        elif key in other_repos:\n",
-    "            bw_centrality_interesting_repos[key] = bw_centrality[key]\n",
+    "        elif key in incubating_repos:\n",
+    "            bw_centrality_incubating_repos[key] = bw_centrality[key]\n",
+    "        \n",
+    "        elif key in sandbox_repos:\n",
+    "            bw_centrality_sandbox_repos[key] = bw_centrality[key]\n",
     "    \n",
-    "    top_bw_centrality_known_repos = dict(sorted(bw_centrality_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
-    "    top_bw_centrality_interesting_repos = dict(sorted(bw_centrality_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_bw_centrality_graduated_repos = dict(sorted(bw_centrality_graduated_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_bw_centrality_incubating_repos = dict(sorted(bw_centrality_incubating_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_bw_centrality_sandbox_repos = dict(sorted(bw_centrality_sandbox_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
     "    \n",
-    "    return top_bw_centrality_known_repos, top_bw_centrality_interesting_repos, bw_centrality, scores\n",
+    "    return top_bw_centrality_graduated_repos, top_bw_centrality_incubating_repos, top_bw_centrality_sandbox_repos, bw_centrality, scores\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e6e83c78-0404-40cb-8e5e-71a9f11d9c65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_closeness_centrality(graph, top, known_repos, other_repos, scores):\n",
+    "def get_closeness_centrality(graph, top, graduated_repos, incubating_repos, sandbox_repos, scores):\n",
     "    \n",
     "    \"\"\"\n",
     "    This method takes in a graph, and returns the nodes ranked by closeness centrality scores\n",
@@ -353,31 +374,36 @@
     "    \n",
     "    scores['closeness_centrality'] = scores['repo'].map(c_centrality)\n",
     "    \n",
-    "    c_centrality_known_repos = collections.defaultdict(int)\n",
-    "    c_centrality_interesting_repos = collections.defaultdict(int)\n",
+    "    c_centrality_graduated_repos = collections.defaultdict(int)\n",
+    "    c_centrality_incubating_repos = collections.defaultdict(int)\n",
+    "    c_centrality_sandbox_repos = collections.defaultdict(int)\n",
     "\n",
     "    for key in c_centrality:\n",
-    "        if key in known_repos:\n",
-    "            c_centrality_known_repos[key] = c_centrality[key]\n",
+    "        if key in graduated_repos:\n",
+    "            c_centrality_graduated_repos[key] = c_centrality[key]\n",
     "\n",
-    "        elif key in other_repos:\n",
-    "            c_centrality_interesting_repos[key] = c_centrality[key]\n",
+    "        elif key in incubating_repos:\n",
+    "            c_centrality_incubating_repos[key] = c_centrality[key]\n",
+    "        \n",
+    "        elif key in sandbox_repos:\n",
+    "            c_centrality_sandbox_repos[key] = c_centrality[key]\n",
     "    \n",
-    "    top_c_centrality_known_repos = dict(sorted(c_centrality_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
-    "    top_c_centrality_interesting_repos = dict(sorted(c_centrality_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_c_centrality_graduated_repos = dict(sorted(c_centrality_graduated_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_c_centrality_incubating_repos = dict(sorted(c_centrality_incubating_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    top_c_centrality_sandbox_repos = dict(sorted(c_centrality_sandbox_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
     "    \n",
-    "    return top_c_centrality_known_repos, top_c_centrality_interesting_repos, c_centrality, scores\n",
+    "    return top_c_centrality_graduated_repos, top_c_centrality_incubating_repos, top_c_centrality_sandbox_repos, c_centrality, scores\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0379ee41-df81-497c-b87f-587f872ada8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_graph(graph, known_repos, other_repos, size, title, weights=None, with_labels=True, alpha=None, edge_color='k'):\n",
+    "def plot_graph(graph, graduated_repos, incubating_repos, sandbox_repos, size, title, weights=None, with_labels=True, alpha=None, edge_color='k'):\n",
     "    \n",
     "    \"\"\"\n",
     "    graph: the networkX graph that we want to plot\n",
@@ -391,17 +417,20 @@
     "    \n",
     "    here we plot a networkx graph based on the provided parameters\n",
     "    \"\"\"\n",
-    "    blue_patch = mpatches.Patch(color='blue', label='Known Repositories')\n",
-    "    green_patch = mpatches.Patch(color='green', label='Interesting Repositories')\n",
+    "    blue_patch = mpatches.Patch(color='blue', label='Graduated Repositories')\n",
+    "    green_patch = mpatches.Patch(color='green', label='Incubating Repositories')\n",
+    "    red_patch = mpatches.Patch(color='red', label='Sandbox Repositories')\n",
     "    yellow_patch = mpatches.Patch(color='green', label='Contributors')\n",
     "\n",
     "    nodes = graph.nodes()\n",
     "    colors = []\n",
     "    for n in nodes:\n",
-    "        if n in known_repos:\n",
+    "        if n in graduated_repos:\n",
     "            colors.append('blue')\n",
-    "        elif n in other_repos:\n",
+    "        elif n in incubating_repos:\n",
     "            colors.append('green')\n",
+    "        elif n in sandbox_repos:\n",
+    "            colors.append('red')\n",
     "        else:\n",
     "            colors.append('yellow')\n",
     "            \n",
@@ -417,14 +446,14 @@
     "    font = {\"color\": \"k\", \"fontsize\": 15}\n",
     "    \n",
     "    ax.set_title(title, font)\n",
-    "    ax.legend(handles=[yellow_patch, blue_patch, green_patch])\n",
+    "    ax.legend(handles=[yellow_patch, blue_patch, green_patch, red_patch])\n",
     "    \n",
     "    nx.draw_networkx(graph, node_color=colors, node_size=node_sizes, font_size=9, ax=ax, with_labels=with_labels, alpha=alpha, edge_color=edge_color)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "a562a663-b92e-4323-92a2-7e7c58ed1ab4",
    "metadata": {},
    "outputs": [],
@@ -496,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
