--- a/notebooks/graph_analysis/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/graph_helper_functions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "f17ef2b5-015c-4b1c-886c-ac8553b869e3",
    "metadata": {},
    "outputs": [],
@@ -20,10 +20,14 @@
     "from operator import itemgetter\n",
     "import matplotlib.patches as mpatches\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as mcolors\n",
     "\n",
     "import sqlalchemy as salc\n",
     "import networkx as nx\n",
     "import json\n",
+    "import matplotlib.colors as mcolors\n",
+    "import random\n",
+    "import uuid\n",
     "\n",
     "with open(\"../../comm_cage.json\") as config_file:\n",
     "    config = json.load(config_file)"
@@ -259,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_page_ranks(graph, top, known_repos, other_repos, scores):\n",
+    "def get_page_ranks(graph, top, repo_dict, scores):\n",
     "    \n",
     "    \"\"\"\n",
     "    This method takes in a graph, and returns the nodes ranked by page rank \n",
@@ -273,21 +277,19 @@
     "    \n",
     "    scores['page_rank'] = scores['repo'].map(pageranks)\n",
     "    \n",
-    "    page_rank_known_repos = collections.defaultdict(int)\n",
-    "    page_rank_interesting_repos = collections.defaultdict(int)\n",
-    "\n",
-    "    for key in pageranks:\n",
-    "        if key in known_repos:\n",
-    "            page_rank_known_repos[key] = pageranks[key]\n",
-    "\n",
-    "        elif key in other_repos:\n",
-    "            page_rank_interesting_repos[key] = pageranks[key]\n",
+    "    pr_dicts = collections.defaultdict(dict)\n",
     "    \n",
-    "    top_page_rank_known_repos = dict(sorted(page_rank_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
-    "    top_page_rank_interesting_repos = dict(sorted(page_rank_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    for key in pageranks:  \n",
+    "        for repo_group in repo_dict:\n",
+    "            if key in repo_dict[repo_group]:\n",
+    "                pr_dicts[repo_group][key] = pageranks[key]\n",
+    " \n",
+    "    top_repos = collections.defaultdict(dict)\n",
     "    \n",
-    "    return top_page_rank_known_repos, top_page_rank_interesting_repos, pageranks, scores\n",
-    "    "
+    "    for pr_dict in pr_dicts:\n",
+    "        top_repos[str(pr_dict)] = dict(sorted(pr_dicts[pr_dict].items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "            \n",
+    "    return top_repos, pageranks, scores"
    ]
   },
   {
@@ -297,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_betweenness_centrality(graph, top, known_repos, other_repos, scores):\n",
+    "def get_betweenness_centrality(graph, top, repo_dict, scores):\n",
     "    \n",
     "    \"\"\"\n",
     "    This method takes in a graph, and returns the nodes ranked by betweenness centrality scores\n",
@@ -310,26 +312,24 @@
     "    # Betweenness centrality measures the extent to which a node lies on paths between other nodes in the graph. \n",
     "    # Nodes with higher betweenness have more influence within a network. \n",
     "    # Thus repositories with higher centrality scores can thought to be influential in connection to other repositories in the network.\n",
-    "\n",
+    "    \n",
     "    bw_centrality = nx.betweenness_centrality(graph)\n",
-    "    \n",
+    "\n",
     "    scores['betweenness_centrality'] = scores['repo'].map(bw_centrality)\n",
-    "\n",
-    "    bw_centrality_known_repos = collections.defaultdict(int)\n",
-    "    bw_centrality_interesting_repos = collections.defaultdict(int)\n",
-    "\n",
-    "    for key in bw_centrality:\n",
-    "        if key in known_repos:\n",
-    "            bw_centrality_known_repos[key] = bw_centrality[key]\n",
-    "\n",
-    "        elif key in other_repos:\n",
-    "            bw_centrality_interesting_repos[key] = bw_centrality[key]\n",
     "    \n",
-    "    top_bw_centrality_known_repos = dict(sorted(bw_centrality_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
-    "    top_bw_centrality_interesting_repos = dict(sorted(bw_centrality_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    bc_dicts = collections.defaultdict(dict)\n",
     "    \n",
-    "    return top_bw_centrality_known_repos, top_bw_centrality_interesting_repos, bw_centrality, scores\n",
-    "    "
+    "    for key in bw_centrality:  \n",
+    "        for repo_group in repo_dict:\n",
+    "            if key in repo_dict[repo_group]:\n",
+    "                bc_dicts[repo_group][key] = bw_centrality[key]\n",
+    " \n",
+    "    top_repos = collections.defaultdict(dict)\n",
+    "    \n",
+    "    for bc_dict in bc_dicts:\n",
+    "        top_repos[str(bc_dict)] = dict(sorted(bc_dicts[bc_dict].items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "            \n",
+    "    return top_repos, bw_centrality, scores"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_closeness_centrality(graph, top, known_repos, other_repos, scores):\n",
+    "def get_closeness_centrality(graph, top, repo_dict, scores):\n",
     "    \n",
     "    \"\"\"\n",
     "    This method takes in a graph, and returns the nodes ranked by closeness centrality scores\n",
@@ -353,21 +353,19 @@
     "    \n",
     "    scores['closeness_centrality'] = scores['repo'].map(c_centrality)\n",
     "    \n",
-    "    c_centrality_known_repos = collections.defaultdict(int)\n",
-    "    c_centrality_interesting_repos = collections.defaultdict(int)\n",
-    "\n",
-    "    for key in c_centrality:\n",
-    "        if key in known_repos:\n",
-    "            c_centrality_known_repos[key] = c_centrality[key]\n",
-    "\n",
-    "        elif key in other_repos:\n",
-    "            c_centrality_interesting_repos[key] = c_centrality[key]\n",
+    "    cc_dicts = collections.defaultdict(dict)\n",
     "    \n",
-    "    top_c_centrality_known_repos = dict(sorted(c_centrality_known_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
-    "    top_c_centrality_interesting_repos = dict(sorted(c_centrality_interesting_repos.items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "    for key in c_centrality:  \n",
+    "        for repo_group in repo_dict:\n",
+    "            if key in repo_dict[repo_group]:\n",
+    "                cc_dicts[repo_group][key] = c_centrality[key]\n",
+    " \n",
+    "    top_repos = collections.defaultdict(dict)\n",
     "    \n",
-    "    return top_c_centrality_known_repos, top_c_centrality_interesting_repos, c_centrality, scores\n",
-    "    "
+    "    for cc_dict in cc_dicts:\n",
+    "        top_repos[str(cc_dict)] = dict(sorted(cc_dicts[cc_dict].items(), key = itemgetter(1), reverse = True)[:top])\n",
+    "            \n",
+    "    return top_repos, c_centrality, scores"
    ]
   },
   {
@@ -377,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_graph(graph, known_repos, other_repos, size, title, weights=None, with_labels=True, alpha=None, edge_color='k'):\n",
+    "def plot_graph(graph, repo_dict, size, title, weights=None, with_labels=True, alpha=None, edge_color='k'):\n",
     "    \n",
     "    \"\"\"\n",
     "    graph: the networkX graph that we want to plot\n",
@@ -391,35 +389,55 @@
     "    \n",
     "    here we plot a networkx graph based on the provided parameters\n",
     "    \"\"\"\n",
-    "    blue_patch = mpatches.Patch(color='blue', label='Known Repositories')\n",
-    "    green_patch = mpatches.Patch(color='green', label='Interesting Repositories')\n",
-    "    yellow_patch = mpatches.Patch(color='green', label='Contributors')\n",
+    "    patches = []\n",
     "\n",
     "    nodes = graph.nodes()\n",
-    "    colors = []\n",
+    "    node_colors = []\n",
+    "    chosen_colors = random.sample(list(mcolors.CSS4_COLORS), len(repo_dict) + 1)\n",
+    "    repo_no = 0\n",
+    "    \n",
+    "    #assign random colors to each repo_group\n",
+    "    color_map = collections.defaultdict(str)   \n",
+    "    for repo_group in repo_dict:\n",
+    "        color_map[repo_group] = chosen_colors[repo_no]\n",
+    "        repo_no += 1\n",
+    "    color_map['Contributors'] = chosen_colors[-1]\n",
+    "\n",
     "    for n in nodes:\n",
-    "        if n in known_repos:\n",
-    "            colors.append('blue')\n",
-    "        elif n in other_repos:\n",
-    "            colors.append('green')\n",
-    "        else:\n",
-    "            colors.append('yellow')\n",
-    "            \n",
+    "        color_assigned = False\n",
+    "        try:\n",
+    "            uuid.UUID(str(n))\n",
+    "            node_colors.append(color_map['Contributors'])\n",
+    "            continue\n",
+    "        except ValueError:\n",
+    "            for repo_group in repo_dict:                    \n",
+    "                if n in repo_dict[repo_group]:\n",
+    "                    node_colors.append(color_map[repo_group])\n",
+    "                    color_assigned = True\n",
+    "                    break\n",
+    "                else:\n",
+    "                    continue\n",
+    "        if color_assigned == False:\n",
+    "            node_colors.append(\"white\")\n",
+    "\n",
     "    if size == 'weighted':\n",
     "        node_sizes = [v * 10000 for v in weights.values()]\n",
     "    elif size == 'conditional':\n",
     "        node_sizes = [1000 if ns in weights else 50 for ns in nodes]\n",
     "    elif size == 'equal':\n",
     "        node_sizes = 300\n",
-    "\n",
+    "    \n",
+    "    for color in color_map:\n",
+    "        patches.append(mpatches.Patch(color=color_map[color], label=color))\n",
+    "        \n",
     "    fig, ax = plt.subplots(figsize=(15,15))\n",
     "\n",
     "    font = {\"color\": \"k\", \"fontsize\": 15}\n",
     "    \n",
     "    ax.set_title(title, font)\n",
-    "    ax.legend(handles=[yellow_patch, blue_patch, green_patch])\n",
+    "    ax.legend(handles=patches)\n",
     "    \n",
-    "    nx.draw_networkx(graph, node_color=colors, node_size=node_sizes, font_size=9, ax=ax, with_labels=with_labels, alpha=alpha, edge_color=edge_color)"
+    "    nx.draw_networkx(graph, node_color=node_colors, node_size=node_sizes, font_size=9, ax=ax, with_labels=with_labels, alpha=alpha, edge_color=edge_color)"
    ]
   },
   {
