--- a/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "f17ef2b5-015c-4b1c-886c-ac8553b869e3",
    "metadata": {},
    "outputs": [],
@@ -27,10 +27,7 @@
     "import json\n",
     "import matplotlib.colors as mcolors\n",
     "import random\n",
-    "import uuid\n",
-    "\n",
-    "with open(\"../../comm_cage.json\") as config_file:\n",
-    "    config = json.load(config_file)"
+    "import uuid"
    ]
   },
   {
