--- a/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
@@ -40,13 +40,14 @@
     "def get_repos(repos, engine):\n",
     "\n",
     "    repo_set = []\n",
-    "    repo_name_set = []\n",
+    "    repo_git_set = []\n",
     "    for repo_git in repos:\n",
     "        repo_query = salc.sql.text(f\"\"\"\n",
     "                     SET SCHEMA 'augur_data';\n",
     "                     SELECT \n",
     "                        b.repo_id,\n",
-    "                        b.repo_name\n",
+    "                        b.repo_name,\n",
+    "                        b.repo_git\n",
     "                    FROM\n",
     "                        repo_groups a,\n",
     "                        repo b\n",
@@ -58,10 +59,10 @@
     "        t = engine.execute(repo_query)\n",
     "        results = t.mappings().all()[0]\n",
     "        repo_id = results['repo_id']\n",
-    "        repo_name = results['repo_name']\n",
+    "        repo_git = results['repo_git']\n",
     "        repo_set.append(repo_id)\n",
-    "        repo_name_set.append(repo_name)\n",
-    "    return repo_set, repo_name_set"
+    "        repo_git_set.append(repo_git)\n",
+    "    return repo_set, repo_git_set"
    ]
   },
   {
@@ -98,7 +99,6 @@
     "    issue_contrib = issue_contrib.reset_index()\n",
     "    issue_contrib.drop(\"index\", axis=1, inplace=True)\n",
     "    issue_contrib.columns =['repo_id', 'repo_git', 'repo_name', 'cntrb_id', 'action', 'issue_id', 'created_at']\n",
-    "#     issue_contrib['cntrb_id'] = issue_contrib['cntrb_id'].astype('Int64')\n",
     "    return issue_contrib"
    ]
   },
@@ -122,7 +122,6 @@
     "    df_current_repo = pd.read_sql(repo_query, con=engine)\n",
     "        \n",
     "    print(df_current_repo)\n",
-    "#     issue_contrib['cntrb_id'] = issue_contrib['cntrb_id'].astype('Int64')\n",
     "    return issue_contrib"
    ]
   },
@@ -244,10 +243,10 @@
    "source": [
     "def created_melted_dfs(df):\n",
     "\n",
-    "    df = df.groupby(['repo_name', 'cntrb_id']).size().unstack(fill_value=0)\n",
+    "    df = df.groupby(['org_repo', 'cntrb_id']).size().unstack(fill_value=0)\n",
     "    df = df.reset_index()\n",
     "\n",
-    "    df_melted = df.melt(['repo_name'], var_name = 'cntrb_id',value_name='number')\n",
+    "    df_melted = df.melt(['org_repo'], var_name = 'cntrb_id',value_name='number')\n",
     "    df_melted = df_melted[df_melted[df_melted.columns[2]] != 0]\n",
     "\n",
     "    return df_melted"
@@ -462,7 +461,7 @@
     "        if row['cntrb_id'] not in contributorGraph:\n",
     "            contributorGraph[row['cntrb_id']] = []\n",
     "        if(row['total_contributions'] > 0):\n",
-    "            contributorGraph[row['cntrb_id']].append((row['repo_name'], row['total_contributions']))\n",
+    "            contributorGraph[row['cntrb_id']].append((row['org_repo'], row['total_contributions']))\n",
     "            \n",
     "    # `contributorGraph`  is a dictionary where each key is a contributor, \n",
     "    #  and the value is a list of repositories the contributor has contributed to and the number of contributions it has made.\n",
