Update markdowns in cncf nb

--- a/notebooks/graph_analysis/approaches/cncf.ipynb
+++ b/notebooks/graph_analysis/approaches/cncf.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Identify emerging and important projects related to Red Hat using graphical analysis\n",
+    "# Learning to identify the relation between various CNCF projects using graphical analysis\n",
     "\n",
     "In the [graph analysis notebook](./graph_analysis.ipynb), we explored relationships between open source projects and communities by studying graphs. We explored relations such as common contributors and project activities between different GitHub repositories.\n",
     "\n",
-    "In this notebook, our aim is to leverage the graph representation techniques we explored in the previous notebook and apply algorithms such as PageRank, Betweenness Centrality to find important emerging projects for Red Hat."
+    "In this notebook, our aim is to leverage the graph representation techniques we explored in the previous notebook and apply algorithms such as PageRank, Betweenness Centrality to find the relation between various CNCF projects and identify the important repositories among them."
    ]
   },
   {
@@ -91,10 +91,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by feeding an initial list of projects out of which we track projects in 2 categories:\n",
+    "We start by feeding an initial list of CNCF projects out of which we track projects in 3 categories:\n",
     "\n",
-    "1. Red Hat affiliated projects (which include upstream project mappings of Red Hat products), and\n",
-    "2. Projects of potential interest to Red Hat"
+    "1. Graduated projects - projects that are considered stable, widely adopted and production ready, attracting thousands of contributors\n",
+    "2. Incubating projects - projects used successfully in production by a small number of users\n",
+    "3. Sandbox projects - experimental projects not yet widely tested in production on the bleeding edge of technology"
    ]
   },
   {
@@ -1507,11 +1508,8 @@
    "source": [
     "***What do we see in this plot?***\n",
     "\n",
-    "\n",
-    "\n",
-    "Lets look at what are the top 3 nodes\n",
-    "\n",
-    "The PageRank algorithm measures the importance of nodes by analyzing the quantity and quality of the links that point to it. So if a repository has a lot of contributors and especially if these contributors count as important nodes, they are still ranked high. "
+    "We see the top 50 nodes in the graph, which include both the project nodes and the contributors.\n",
+    "The PageRank algorithm measures the importance of nodes by analyzing the quantity and quality of the links that point to it. So if a repository has a lot of contributors and especially if these contributors count as important nodes, they are still ranked high."
    ]
   },
   {
@@ -1646,7 +1644,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Graph Type 2: Nodes as projects edges as contributors"
+    "***What do we see in this plot?***\n",
+    "\n",
+    "The size of the nodes in the plot above indicate higher centrality scores. We see that the centrality scores highly rank the graduated and incubated repos. \n",
+    "\n",
+    "Betweenness Centrality gives us good results and is highly ranking graduated repos in comparison to other community repos as this algorithm is able to better capture relative importance of repositories. \n",
+    "\n",
+    "By starting off with well-known/graduated repos, centrality is able to help us disvover other repos which are important in connection to these well-known/graduated repos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Type 2: Nodes as projects edges as contributors\n",
+    "\n",
+    "In this section, we represent data in another graph representation where the project repositories are represented by nodes and the edges are shared contributions between those projects"
    ]
   },
   {
@@ -1694,6 +1707,21 @@
    "source": [
     "t = \"Graph with Nodes as projects and edges as number of contributions\"\n",
     "plot_graph(g, repo_name_set_graduated, repo_name_set_incubating, repo_name_set_sandbox, 'equal', t, None , True, 0.8,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***What do we see in this plot?***\n",
+    "\n",
+    "The above graph represents project repositories and how close or far they are to each other based on their degree of connection (number of shared contributions amongst them). If 2 nodes are close to each other, the 2 projects have a high number of shared contributions and vice versa. Each node in this graph has atleast one connection. We only plot project repositories which are connected to existing known repositories.  \n",
+    "\n",
+    "We see that this graph representation effectively filters out the repositories we are most interested in seeing. **The repository \"closest\" to the \"graduated projects\" are 3 \"incubating projects\" and 1 \"sandbox project\".** This indicates that the more developed and established projects are central in the graph and the lesser known projects are emerging from it.\n",
+    "\n",
+    "The edge lengths and the distance between the nodes can be used to filter out the most connected repos that we are interested in.\n",
+    "\n",
+    "Thus, this graph representation turns out to be an effective way to filter out emerging repositories in relation to already prominent communities."
    ]
   },
   {
@@ -1811,6 +1839,24 @@
    "source": [
     "for graph in sub_graphs:\n",
     "    plot_graph(graph, repo_name_set_graduated, repo_name_set_incubating, repo_name_set_sandbox, 'equal', t, None , True, 0.8,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***What do we see in this plot?***\n",
+    "\n",
+    "We see that in this case, the above graph is similar to the previous one. Ideally, this plot will help us further narrow down on the more densely conected nodes in the graph to better identify the user community around them. By identifying the cluster of similar user groups around projects, we can better track and understand the Open Source community growth."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Storing the Centrality Scores\n",
+    "\n",
+    "Let's calculate the centrality scores for our graduated, incubating and sandbox projects and identify our \"top\" projects."
    ]
   },
   {
@@ -2062,6 +2108,32 @@
    ],
    "source": [
     "repo_scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, we ran an experiment on known open source CNCF repositories. We looked at a timeframe in history where a new open source community was emerging/becoming popular and we tried to track the rise of the community using graph alrgorithms.\n",
+    "\n",
+    "As an example, we wanted to track the emergence of \"incubating\" and \"sandbox\" projects in relation to the already well known \"graduated\" projects. So we fetched the GitHub data for various repos in each of the 3 CNCF category of projects, with the hope that as a result of the analysis, the incubating or sandbox projects would emerge as the community closest in connection to the graduated projects.\n",
+    "\n",
+    "As a result of creating various types of graphical representations of the Github data and using algorithms like PageRank and Betweenness centrality, we saw that:\n",
+    "\n",
+    "1. **PageRank is not effective in showing us important emerging repositories**\n",
+    "\n",
+    "2. **Using Betweenness Centrality ranks, we are able to get Kubernetes, Fluentd, Keylime repos in the top most highly ranked or central repos.**\n",
+    "\n",
+    "3. **Using the graph representation type 2 where we represent nodes as projects and edges as contributors, we are able to very effectively filter out the repositories we are most interested in seeing.**\n",
+    "\n",
+    "**We see that the repositories \"closest\" to graduated project Kubernetes are 3 incubating repositories \"kubedge\", followed by \"serving\" followed by \"thanos\" and 2 sandbox projects \"osm\" followed by \"keylime\".**"
    ]
   }
  ],
