Add cncf time based ranking nb

--- a/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
@@ -254,11 +254,11 @@
    "source": [
     "def created_melted_dfs(df):\n",
     "\n",
-    "    df = df.groupby(['org_repo', 'cntrb_id']).size().unstack(fill_value=0)\n",
+    "    df = df.groupby(['org_repo', 'cntrb_id', 'created_at_dt']).size().unstack(fill_value=0)\n",
     "    df = df.reset_index()\n",
     "\n",
-    "    df_melted = df.melt(['org_repo'], var_name = 'cntrb_id',value_name='number')\n",
-    "    df_melted = df_melted[df_melted[df_melted.columns[2]] != 0]\n",
+    "    df_melted = df.melt(id_vars=['org_repo','cntrb_id'], var_name = 'date', value_name='number')\n",
+    "    df_melted = df_melted[df_melted[df_melted.columns[3]] != 0]\n",
     "\n",
     "    return df_melted"
    ]
