Update nb to use new data table

--- a/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
@@ -69,6 +69,35 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "a0c79d85-986f-4660-8ee8-77c76750f74d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_contributors(repo_set, engine):\n",
+    "    \n",
+    "    contrib_df = pd.DataFrame()\n",
+    "    for repo_id in repo_set:\n",
+    "        repo_query = salc.sql.text(f\"\"\"\n",
+    "                    SET SCHEMA 'augur_data';\n",
+    "                    SELECT *\n",
+    "                    FROM\n",
+    "                    explorer_contributor_actions\n",
+    "                    WHERE\n",
+    "                    repo_id = \\'{repo_id}\\'\n",
+    "            \"\"\")\n",
+    "\n",
+    "        with engine.connect() as conn:\n",
+    "            df_current_repo = pd.read_sql_query(repo_query, conn)\n",
+    "        contrib_df = pd.concat([contrib_df, df_current_repo])\n",
+    "\n",
+    "    contrib_df = contrib_df.reset_index()\n",
+    "    contrib_df.drop(\"index\", axis=1, inplace=True)\n",
+    "    return contrib_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "40a5c30d-9e9d-46b2-916a-ff64809bc288",
    "metadata": {},
    "outputs": [],
@@ -107,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c6e43d1c-e03d-4428-a600-dfd40f9ae74c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b397d6d4-320a-4434-a1ff-5bd006eddebf",
    "metadata": {},
    "outputs": [],
@@ -171,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "87158ad6-c882-4f36-97d3-26f6eaa96dab",
    "metadata": {},
    "outputs": [],
@@ -210,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0a73e2b4-a6de-4048-aab7-bec1bb2aa4ed",
    "metadata": {},
    "outputs": [],
@@ -247,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "bb85e401-d717-47a5-8639-cc23555de47d",
    "metadata": {},
    "outputs": [],
@@ -265,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0f88f1f5-9cf6-46ba-8d9b-bed7b45a3c7e",
    "metadata": {},
    "outputs": [],
@@ -301,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e532825c-411d-4cce-b659-31ea239ba910",
    "metadata": {},
    "outputs": [],
@@ -341,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e6e83c78-0404-40cb-8e5e-71a9f11d9c65",
    "metadata": {},
    "outputs": [],
@@ -377,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0379ee41-df81-497c-b87f-587f872ada8a",
    "metadata": {},
    "outputs": [],
@@ -449,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a562a663-b92e-4323-92a2-7e7c58ed1ab4",
    "metadata": {},
    "outputs": [],
