added closeness centrality

--- a/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
+++ b/notebooks/graph_analysis/approaches/graph_helper_functions.ipynb
@@ -501,7 +501,7 @@
     "        if row['cntrb_id'] not in contributorGraph:\n",
     "            contributorGraph[row['cntrb_id']] = []\n",
     "        if(row['total_contributions'] > 0):\n",
-    "            contributorGraph[row['cntrb_id']].append((row['org_repo'], row['total_contributions']))\n",
+    "            contributorGraph[row['cntrb_id']].append((row['repo_name'], row['total_contributions']))\n",
     "            \n",
     "    # `contributorGraph`  is a dictionary where each key is a contributor, \n",
     "    #  and the value is a list of repositories the contributor has contributed to and the number of contributions it has made.\n",
